--- a/Warehousing/warehouse/templates/ai_prompt.html
+++ b/Warehousing/warehouse/templates/ai_prompt.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% comment %} <!DOCTYPE html>
 <html lang="th">
 <head>
   <meta charset="UTF-8">
@@ -49,4 +49,4 @@
     });
   </script>
 </body>
-</html>
+</html> {% endcomment %}
